--- a/appointment-deploy.yaml
+++ b/appointment-deploy.yaml
@@ -1,14 +1,3 @@
----
-apiVersion: v1    
-kind: Secret
-metadata:
-  name: appointment-secret
-type: Opaque
-data:
-  MYSQL_DATABASE: bmFjdG8= #nacto
-  MYSQL_USER: cm9vdA== #root
-  MYSQL_PASSWORD: cGFzc3dvcmQ= #password
----
 apiVersion: extensions/v1
 kind: Deployment
 metadata:
@@ -33,12 +22,12 @@ spec:
           - name: spring_datasource_username
             valueFrom:
               secretKeyRef:
-                name: appointment-secret
+                name: mysql-secret
                 key: MYSQL_USER
           - name: spring_datasource_password
             valueFrom:
               secretKeyRef:
-                name: appointment-secret
+                name: mysql-secret
                 key: MYSQL_PASSWORD
 ---
 apiVersion: v1
