--- a/doctor-deploy.yaml
+++ b/doctor-deploy.yaml
@@ -1,18 +1,8 @@
----
-apiVersion: v1    
-kind: Secret
-metadata:
-  name: doctor-secret
-type: Opaque
-data:
-  MYSQL_DATABASE: bmFjdG8= #nacto
-  MYSQL_USER: cm9vdA== #root
-  MYSQL_PASSWORD: cGFzc3dvcmQ= #password
----
 apiVersion: extensions/v1
 kind: Deployment
 metadata:
   name: doctor
+  namespace: mysql-repl
 spec:
   replicas: 2
   template:
@@ -29,16 +19,16 @@ spec:
           - name: spring_jpa_database
             value: mysql
           - name: spring_datasource_url
-            value: jdbc:mysql://mysql-master:3306/test?useSSL=false
+            value: jdbc:mysql://nacto-db:3306/test?useSSL=false
           - name: spring_datasource_username
             valueFrom:
               secretKeyRef:
-                name: doctor-secret
+                name: mysql-secret
                 key: MYSQL_USER
           - name: spring_datasource_password
             valueFrom:
               secretKeyRef:
-                name: doctor-secret
+                name: mysql-secret
                 key: MYSQL_PASSWORD
 ---
 apiVersion: v1
