--- a/patient-deploy.yaml
+++ b/patient-deploy.yaml
@@ -19,7 +19,7 @@ spec:
           - name: spring_jpa_database
             value: mysql
           - name: spring_datasource_url
-            value: jdbc:mysql://nacto-db:3306/test?useSSL=false
+            value: jdbc:mysql://nacto-db:3306/nacto?createDatabaseIfNotExist=true&useSSL=false
           - name: spring_datasource_username
             valueFrom:
               secretKeyRef:
