--- a/nacto-db.yaml
+++ b/nacto-db.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - image: mysql:5.7
-        name: nacto-db
+        name: mysql
         env:
         - name: MYSQL_SERVER_CONTAINER
           value: mysql
