--- a/nacto-db.yaml
+++ b/nacto-db.yaml
@@ -15,7 +15,7 @@ spec:
         app: nacto-db
     spec:
       containers:
-      - image: mysql:5.7
+      - image: registry.redhat.io/rhscl/mysql-57-rhel7
         name: mysql
         env:
         - name: MYSQL_SERVER_CONTAINER
