--- a/doctor-deploy.yaml
+++ b/doctor-deploy.yaml
@@ -4,15 +4,18 @@ metadata:
   name: doctor
   namespace: mysql-repl
 spec:
+  selector:
+      matchLabels:
+        app: doctor
   replicas: 1
   template:
     metadata:
       labels:
         app: doctor
     spec:
-      containers:
+      containers:         
         - name: doctor
-          image: 'neethirocks/doctor:1.0'
+          image: 'neethirocks/doctor:1.0'          
           ports:
             - containerPort: 80
           env:
