--- a/appointment-deploy.yaml
+++ b/appointment-deploy.yaml
@@ -4,15 +4,18 @@ metadata:
   name: appointment
   namespace: mysql-repl
 spec:
+  selector:
+      matchLabels:
+        app: appointment
   replicas: 1
   template:
     metadata:
       labels:
         app: appointment
     spec:
-      containers:
+      containers:         
         - name: appointment
-          image: 'neethirocks/appointment:1.0'
+          image: 'neethirocks/appointment:1.0'          
           ports:
             - containerPort: 80
           env:
