--- a/nacto-db.yaml
+++ b/nacto-db.yaml
@@ -15,7 +15,7 @@ spec:
         app: healthdb
     spec:
       containers:
-      - image: registry.redhat.io/rhscl/mysql-57-rhel7
+      - image: mysql:5.7
         name: mysql
         env:
         - name: MYSQL_SERVER_CONTAINER
