--- a/appointment-deploy.yaml
+++ b/appointment-deploy.yaml
@@ -46,6 +46,7 @@ spec:
       targetPort: 8080
       protocol: TCP
       name: '8080'
+      nodePort: 32698
   selector:
     app: appointment
   type: NodePort
