--- a/patient-deploy.yaml
+++ b/patient-deploy.yaml
@@ -46,6 +46,7 @@ spec:
       targetPort: 8080
       protocol: TCP
       name: '8080'
+      nodePort: 30369
   selector:
     app: patient
   type: NodePort
