--- a/doctor-deploy.yaml
+++ b/doctor-deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: doctor
-  namespace: healthapp
+  namespace: testing-project1
 spec:
   selector:
       matchLabels:
