--- a/doctor-deploy.yaml
+++ b/doctor-deploy.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: doctor
+  name: testing-doctor
   namespace: testing-project1
 spec:
   selector:
       matchLabels:
-        app: doctor
+        app: testing-doctor
   replicas: 1
   template:
     metadata:
       labels:
-        app: doctor
+        app: testing-doctor
     spec:
       containers:         
-        - name: doctor
-          image: 'neethirocks/doctor:1.1'          
+        - name: testing-doctor
+          image: 'neethirocks/testing-doctor:1.1'          
           ports:
             - containerPort: 8080
           env:
@@ -37,9 +37,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: doctor-service
+  name: testing-doctor-service
   labels:
-    name: doctor-service
+    name: testing-doctor-service
 spec:
   ports:
     - port: 80
@@ -48,5 +48,5 @@ spec:
       name: '8080'
       nodePort: 31846
   selector:
-    app: doctor
+    app: testing-doctor
   type: NodePort
