--- a/nacto-db-PR.yaml
+++ b/nacto-db-PR.yaml
@@ -12,7 +12,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/data1"
+    path: "/mnt/testingdata"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
