--- a/nacto-db-DR.yaml
+++ b/nacto-db-DR.yaml
@@ -31,18 +31,18 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: testinghealthdb
+  name: healthdb
   namespace: testing-project1
 spec:
   selector:
     matchLabels:
-      app: testinghealthdb
+      app: healthdb
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: testinghealthdb
+        app: healthdb
     spec:
       containers:
       - image: mysql:5.7
@@ -85,13 +85,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: testinghealthdb
+  name: healthdb
 spec:
   type: NodePort
   ports:
-  - name: testinghealthdb
+  - name: healthdb
     port: 3306
     targetPort: 3306
     protocol: TCP
   selector:
-    app: testinghealthdb
+    app: healthdb
