--- a/nacto-db-PR.yaml
+++ b/nacto-db-PR.yaml
@@ -11,8 +11,9 @@ spec:
     storage: 1Gi
   accessModes:
     - ReadWriteOnce
-  hostPath:
-    path: "/mnt/testingdata"
+  nfs:
+    path: /opt/testingdata/pr
+    server: 192.168.8.61    
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
