--- a/nacto-db-DR.yaml
+++ b/nacto-db-DR.yaml
@@ -12,7 +12,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/testingdataDR"
+    path: "/mnt/testingdataDR/dr/var/lib/mysql"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
